// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notice demo -- base 1`] = `
.emotion-11 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-11 .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
  vertical-align: middle;
}

.emotion-11 .e1aspfr52 {
  color: #526075;
}

.emotion-2 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-4 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-9 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.emotion-7 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.emotion-24 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #9effa5;
  background: #e6ffed;
}

.emotion-24 .uc-fe-notice-icon {
  fill: #15ad31;
  color: #15ad31;
  vertical-align: middle;
}

.emotion-24 .e1aspfr52 {
  color: #526075;
}

.emotion-37 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #ffe38d;
  background: #fffce6;
}

.emotion-37 .uc-fe-notice-icon {
  fill: #ffc42e;
  color: #ffc42e;
  vertical-align: middle;
}

.emotion-37 .e1aspfr52 {
  color: #526075;
}

.emotion-50 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.emotion-50 .uc-fe-notice-icon {
  fill: #f44336;
  color: #f44336;
  vertical-align: middle;
}

.emotion-50 .e1aspfr52 {
  color: #526075;
}

.emotion-63 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #cccccc;
  border: 1px solid #d9d9d9;
}

.emotion-63 .uc-fe-notice-icon {
  fill: #cccccc;
  color: #cccccc;
  vertical-align: middle;
}

.emotion-63 .e1aspfr52 {
  color: #526075;
}

.emotion-11 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-11 .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
  vertical-align: middle;
}

.emotion-11 .e1aspfr52 {
  color: #526075;
}

.emotion-2 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-4 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-9 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.emotion-7 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.emotion-24 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #9effa5;
  background: #e6ffed;
}

.emotion-24 .uc-fe-notice-icon {
  fill: #15ad31;
  color: #15ad31;
  vertical-align: middle;
}

.emotion-24 .e1aspfr52 {
  color: #526075;
}

.emotion-37 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #ffe38d;
  background: #fffce6;
}

.emotion-37 .uc-fe-notice-icon {
  fill: #ffc42e;
  color: #ffc42e;
  vertical-align: middle;
}

.emotion-37 .e1aspfr52 {
  color: #526075;
}

.emotion-50 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.emotion-50 .uc-fe-notice-icon {
  fill: #f44336;
  color: #f44336;
  vertical-align: middle;
}

.emotion-50 .e1aspfr52 {
  color: #526075;
}

.emotion-63 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #cccccc;
  border: 1px solid #d9d9d9;
}

.emotion-63 .uc-fe-notice-icon {
  fill: #cccccc;
  color: #cccccc;
  vertical-align: middle;
}

.emotion-63 .e1aspfr52 {
  color: #526075;
}

<div>
  <div
    class=" emotion-11 emotion-12"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-9 emotion-10"
    >
      <svg
        class="emotion-6 emotion-7 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-24 emotion-12"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-9 emotion-10"
    >
      <svg
        class="emotion-6 emotion-7 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-37 emotion-12"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-9 emotion-10"
    >
      <svg
        class="emotion-6 emotion-7 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-50 emotion-12"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-9 emotion-10"
    >
      <svg
        class="emotion-6 emotion-7 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-63 emotion-12"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-9 emotion-10"
    >
      <svg
        class="emotion-6 emotion-7 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Notice demo -- custom 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-6 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-6 .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
  vertical-align: middle;
}

.emotion-6 .emotion-61 {
  color: #526075;
}

.emotion-2 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-4 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-13 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.emotion-11 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.emotion-26 {
  vertical-align: baseline;
}

.emotion-39 {
  vertical-align: baseline;
}

.emotion-39.emotion-39.emotion-39 {
  -webkit-animation: animation-0 1.2s infinite linear;
  animation: animation-0 1.2s infinite linear;
  line-height: normal;
}

.emotion-60 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.emotion-60 > * {
  vertical-align: middle;
}

@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-6 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-6 .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
  vertical-align: middle;
}

.emotion-6 .emotion-61 {
  color: #526075;
}

.emotion-2 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-4 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-13 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.emotion-11 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.emotion-26 {
  vertical-align: baseline;
}

.emotion-39 {
  vertical-align: baseline;
}

.emotion-39.emotion-39.emotion-39 {
  -webkit-animation: animation-0 1.2s infinite linear;
  animation: animation-0 1.2s infinite linear;
  line-height: normal;
}

.emotion-60 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.emotion-60 > * {
  vertical-align: middle;
}

<div>
  <div
    class=" emotion-6 emotion-7"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
  </div>
  <div
    class=" emotion-6 emotion-7"
    style="margin-bottom:8px"
  >
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <svg
        class="emotion-10 emotion-11 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-6 emotion-7"
    style="margin-bottom:8px"
  >
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <svg
        class="emotion-10 emotion-11 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-6 emotion-7"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <i
        class="uc-fe-icon icon__loading uc-fe-notice-icon emotion-26 emotion-27"
      />
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <svg
        class="emotion-10 emotion-11 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-6 emotion-7"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <i
        class="uc-fe-icon icon__loading uc-fe-icon-spin emotion-39 emotion-27"
      />
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <svg
        class="emotion-10 emotion-11 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-6 emotion-7"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content
    </div>
    <div
      class="emotion-60 emotion-61"
    >
      <i
        class="uc-fe-icon icon__loading emotion-26 emotion-27"
      />
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <svg
        class="emotion-10 emotion-11 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
  <div
    class=" emotion-6 emotion-7"
    style="margin-bottom:8px"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="emotion-4 emotion-5"
    >
      Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content
    </div>
    <div
      class="emotion-60 emotion-61"
    >
      <i
        class="uc-fe-icon icon__loading emotion-26 emotion-27"
      />
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <svg
        class="emotion-10 emotion-11 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Notice demo -- notice 1`] = `
.emotion-111 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-111 .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
  vertical-align: middle;
}

.emotion-111 .e1aspfr52 {
  color: #526075;
}

.emotion-107 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
}

.emotion-105 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-109 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-103 {
  font-size: 12px;
}

.emotion-103 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-103 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-103 .uc-fe-form-label {
  color: #526075;
}

.emotion-39 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-39:before,
.emotion-39:after {
  content: ' ';
  display: table;
}

.emotion-39:after {
  clear: both;
}

.emotion-39 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-33 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-33 .uc-fe-radio-styletype-default,
.emotion-33 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-default:last-child,
.emotion-33 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-33 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-33 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-7 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-5.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-5.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-13 > * {
  font-size: 12px;
}

.emotion-13 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-13.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-13:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-11.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-44 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-44 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-44 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-44 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-44 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-44 .uc-fe-switch-tip-on,
.emotion-44 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-44 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-44 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-44 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-44 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-44:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-44 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-44 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-44 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-111 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-111 .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
  vertical-align: middle;
}

.emotion-111 .e1aspfr52 {
  color: #526075;
}

.emotion-107 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
}

.emotion-105 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-109 {
  display: table-cell;
  vertical-align: middle;
}

.emotion-103 {
  font-size: 12px;
}

.emotion-103 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-103 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-103 .uc-fe-form-label {
  color: #526075;
}

.emotion-39 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-39:before,
.emotion-39:after {
  content: ' ';
  display: table;
}

.emotion-39:after {
  clear: both;
}

.emotion-39 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-33 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-33 .uc-fe-radio-styletype-default,
.emotion-33 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-default:last-child,
.emotion-33 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-33 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-33 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-7 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-5.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-5.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-13 > * {
  font-size: 12px;
}

.emotion-13 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-13.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-13:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-11.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-44 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-44 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-44 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-44 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-44 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-44 .uc-fe-switch-tip-on,
.emotion-44 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-44 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-44 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-44 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-44 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-44:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-44 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-44 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-44 .uc-fe-switch-tip-on {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-103 emotion-104"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        styleType
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-33 emotion-34"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              default
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              success
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              warning
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              error
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              disabled
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        closable
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-44 emotion-45"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        icon
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-33 emotion-34"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              undefined
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              loading
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              circle
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        longContent
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-44 emotion-45"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        withAction
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-44 emotion-45"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-111 emotion-112"
    >
      <span
        class="emotion-107 emotion-108"
      >
        <svg
          class="uc-fe-notice-icon emotion-105 emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-109 emotion-110"
      >
        This is a notice
      </div>
    </div>
  </div>
</div>
`;
